Part 2/2 - Allow for multiple squsihers
1-Vendor
2-build/core

Use add vendor tag to any repo and use your own squisher.

Patch set 2: typo

Change-Id: I7889d7144a3cc13f0d951f7e3763c01328909180

--- a/core/Makefile
+++ b/core/Makefile
@@ -1196,7 +1196,7 @@ ifneq ($(TARGET_CUSTOM_RELEASETOOL),)
 	$(hide) $(TARGET_CUSTOM_RELEASETOOL)
 else
 	@echo -e ${CL_YLW}"Running releasetool..."${CL_RST}
-	$(hide) ./vendor/vanir/tools/squisher
+	$(hide) ./vendor/$(DHO_VENDOR)/tools/squisher
 endif
 
 # -----------------------------------------------------------------
