Add ARCH_VARIANT_CPU and TARGET_GCC_VERSION to dumpvar.mk
and add a printvars target, which will probably be useless, as it prints 90000000000000 variables.

Change-Id: I12786fb40374dc577b31b7f00e5338adf645e901

--- a/core/Makefile
+++ b/core/Makefile
@@ -1320,6 +1320,12 @@ else
 endif
 endif
 
+.PHONY: printvars
+printvars:
+	@$(foreach V,$(sort $(.VARIABLES)), \
+	  $(if $(filter-out environment% default automatic, \
+	  $(origin $V)),$(warning $V=$($V) ($(value $V)))))
+
 # -----------------------------------------------------------------
 # The update package
 
